THRIFT-3705 Go map has incorrect types when used with forward-defined types Client: Go Patch: Jens Geyer

This closes #951